--- a/IEEE_2019/FUSION 2018.htm
+++ b/IEEE_2019/FUSION 2018.htm
@@ -56,6 +56,66 @@
     }
   </style>
   <style type="text/css">
+    .table {
+      width: 100%;
+      max-width: 100%;
+      margin-bottom: 1rem;
+      background-color: transparent;
+    }
+
+    table {
+      border-collapse: collapse;
+      display: table;
+      border-collapse: collapse;
+      border-spacing: 2px;
+      border-color: grey
+    }
+
+    tr {
+      display: table-row;
+      vertical-align: inherit;
+      border-color: inherit;
+    }
+
+    th {
+      text-align: inherit;
+    }
+
+    thead {
+      display: table-header-group;
+      vertical-align: middle;
+      border-color: inherit;
+    }
+
+    tbody {
+      display: table-row-group;
+      vertical-align: middle;
+      border-color: inherit;
+    }
+
+    .table thead th {
+      vertical-align: bottom;
+      border-bottom: 2px solid #dee2e6;
+    }
+
+    .table td,
+    .table th {
+      padding: .75rem;
+      vertical-align: top;
+      border-top: 1px solid #dee2e6;
+    }
+
+    .cardBody {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-size: 1rem;
+      font-weight: 400;
+      line-height: 1.5;
+      color: rgb(33, 37, 41);
+      text-align: left;
+      background-color: rgb(255, 255, 255);
+      margin: 0px;
+    }
+
     @font-face {
       font-family: myriad-pro;
       src: url(https: //use.typekit.com/af/9a5180/00000000000000000001709e/27/l?subset_id=2&fvd=n7&v=3) format("woff2"), url(https://use.typekit.com/af/9a5180/00000000000000000001709e/27/d?subset_id=2&fvd=n7&v=3) format("woff"), url(https://use.typekit.com/af/9a5180/00000000000000000001709e/27/a?subset_id=2&fvd=n7&v=3) format("opentype");
@@ -445,24 +505,79 @@
         </div>
         <hr class="campl-teaser-divider">
         <div class="campl-content-container campl-sub-column-right-border campl-vertical-padding clearfix">
-          <div class="campl-column6">
+          <div class="campl-column">
             <div class="campl-content-container campl-side-padding">
 
-              <div class="campl-teaser campl-vertical-teaser campl-sub-column-right-border">
+              <div class="campl-teaser campl-vertical-teaser ">
                 <h2>
                   <b>News and Events</b>
                 </h2>
-
-                <!-- <h3 class="campl-teaser-title"><a href="https://fusion2018.eng.cam.ac.uk/Sponsorship">Exhibition
-                    and Sponsorship</a></h3>
-                <p>Fusion 2018 is sponsored by</p> -->
-
-                <!-- <a class="campl-primary-cta" href="https://fusion2018.eng.cam.ac.uk/Sponsorship">Read -->
-                <!-- more</a> -->
+                <ul style="font-size:medium">
+                  <li><a href=""> ICCAIS 2018 has accepted Dr. Zhansheng Duan to give a tutorial.(2018/9/17)</a></li>
+                  <li><a href=""> ICCAIS 2018 has accepted Dr. Feihu Zhang and Dr.Kai Huang to give a
+                      tutorial.(2018/8/15)</a></li>
+                  <li><a href=""> ICCAIS 2018 has accepted Dr. Zhansheng Duan to give a tutorial.(2018/9/17)</a></li>
+                  <li><a href=""> ICCAIS 2018 has accepted Dr. Feihu Zhang and Dr.Kai Huang to give a
+                      tutorial.(2018/8/15)</a></li>
+                  <li><a href=""> ICCAIS 2018 has accepted Dr. Zhansheng Duan to give a tutorial.(2018/9/17)</a></li>
+                </ul>
               </div>
             </div>
           </div>
         </div>
+
+        <hr class="campl-teaser-divider">
+        <div class="campl-content-container campl-sub-column-right-border campl-vertical-padding clearfix">
+          <div class="campl-content-container campl-side-padding" >
+            <h2>
+              <b>Important Dates</b>
+            </h2>
+            <div class='cardBody'>
+              <table class='table'>
+                <thead>
+                  <tr>
+                    <th>24-27 Oct. 2018</th>
+                    <th>Main Conference Date</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>10 June 2018 </td>
+                    <td>Organized session proposal</td>
+                  </tr>
+                  <tr>
+                    <td>10 June 2018 </td>
+                    <td>Organized session proposal</td>
+                  </tr>
+                  <tr>
+                    <td>10 June 2018 </td>
+                    <td>Organized session proposal</td>
+                  </tr>
+                  <tr>
+                    <td>10 June 2018 </td>
+                    <td>Organized session proposal</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+
+        <hr class="campl-teaser-divider">
+        <div class="campl-content-container campl-sub-column-right-border campl-vertical-padding clearfix">
+          <div class="campl-column">
+            <div class="campl-content-container campl-side-padding">
+
+              <div class="campl-teaser campl-vertical-teaser ">
+                <h2>
+                  <b>Plenary Speakers</b>
+                </h2>
+                
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
 
 
