--- a/IEEE_2019/FUSION 2018.htm
+++ b/IEEE_2019/FUSION 2018.htm
@@ -572,6 +572,32 @@
                 <h2>
                   <b>Plenary Speakers</b>
                 </h2>
+                <div>
+                  <table border='0px' width='740px'>
+                    <tbody>
+                      <tr>
+                        <td>
+                          <div style='float:left;width:130px;'>
+                            <a>
+                              <img src='./image/professor.jpg' style='width:140px; height:143px;float:left; margin-left:30px;' />
+                            </a>
+                          </div>
+                          <div style='float:right; width:550px; font-size:10px; margin-right:10px;'>
+                            <span>
+                              <b>Title</b>
+                               - 
+                              <a href=''> EEG Brain Dynamics and Biomedical Applications</a>
+                            </span>
+                            <div style='border-bottom:solid 1px #ccc; line-height:0px; margin:3px 0;'></div>
+                            <span style='font-size:13px;'>Prof. Hung Nguyen</span>
+                            <div style='line-height:150%'>Swinburne University of Technology, Australia</div>
+                          </div>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table border='0px' width='740px'></table>
+                </div>
                 
               </div>
             </div>
