--- a/IEEE_2019/FUSION 2018.htm
+++ b/IEEE_2019/FUSION 2018.htm
@@ -66,9 +66,8 @@
     table {
       border-collapse: collapse;
       display: table;
-      border-collapse: collapse;
       border-spacing: 2px;
-      border-color: grey
+      border-color: grey;
     }
 
     tr {
@@ -91,11 +90,12 @@
       display: table-row-group;
       vertical-align: middle;
       border-color: inherit;
+      /* border-bottom: 0px; */
     }
 
     .table thead th {
       vertical-align: bottom;
-      border-bottom: 2px solid #dee2e6;
+      /* border-bottom: 2px solid #dee2e6; */
     }
 
     .table td,
@@ -114,6 +114,13 @@
       text-align: left;
       background-color: rgb(255, 255, 255);
       margin: 0px;
+    }
+
+    .professor:after {
+      content: ".";
+      display: block;
+      height: 0;
+      visibility: hidden;
     }
 
     @font-face {
@@ -528,7 +535,7 @@
 
         <hr class="campl-teaser-divider">
         <div class="campl-content-container campl-sub-column-right-border campl-vertical-padding clearfix">
-          <div class="campl-content-container campl-side-padding" >
+          <div class="campl-content-container campl-side-padding">
             <h2>
               <b>Important Dates</b>
             </h2>
@@ -572,33 +579,44 @@
                 <h2>
                   <b>Plenary Speakers</b>
                 </h2>
-                <div>
-                  <table border='0px' width='740px'>
-                    <tbody>
-                      <tr>
-                        <td>
-                          <div style='float:left;width:130px;'>
-                            <a>
-                              <img src='./image/professor.jpg' style='width:140px; height:143px;float:left; margin-left:30px;' />
-                            </a>
-                          </div>
-                          <div style='float:right; width:550px; font-size:10px; margin-right:10px;'>
-                            <span>
-                              <b>Title</b>
-                               - 
-                              <a href=''> EEG Brain Dynamics and Biomedical Applications</a>
-                            </span>
-                            <div style='border-bottom:solid 1px #ccc; line-height:0px; margin:3px 0;'></div>
-                            <span style='font-size:13px;'>Prof. Hung Nguyen</span>
-                            <div style='line-height:150%'>Swinburne University of Technology, Australia</div>
-                          </div>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                  <table border='0px' width='740px'></table>
+                <div class='professor'style='overflow:auto; margin-bottom:5px;'>
+                  <div style='float:left;width:130px;'>
+                    <a>
+                      <img src='./image/professor.jpg' style='width:140px; height:143px;float:left; margin-left:30px;' />
+                    </a>
+                  </div>
+                  <div style='float:right; width:550px; font-size:10pt; margin-left:50px;'>
+                    <span style='font-size:13pt;'>
+                      <b>Title</b>
+                      -
+                      <a href=''> EEG Brain Dynamics and Biomedical Applications</a>
+                    </span>
+                    <div style='border-bottom:solid 1px #ccc; line-height:0px; margin:3px 0;'></div>
+                    <span style='font-size:13pt;'>Prof. Hung Nguyen</span>
+                    <br>
+                    <div style='line-height:150%'>Swinburne University of Technology, Australia</div>
+                  </div>
                 </div>
-                
+                <div class='professor' style='overflow:auto'>
+                  <div style='float:left;width:130px;'>
+                    <a>
+                      <img src='./image/professor.jpg' style='width:140px; height:143px;float:left; margin-left:30px;' />
+                    </a>
+                  </div>
+                  <div style='float:right; width:550px; font-size:10pt; margin-left:50px;'>
+                    <span style='font-size:13pt;'>
+                      <b>Title</b>
+                      -
+                      <a href=''> EEG Brain Dynamics and Biomedical Applications</a>
+                    </span>
+                    <div style='border-bottom:solid 1px #ccc; line-height:0px; margin:3px 0;'></div>
+                    <span style='font-size:13pt;'>Prof. Hung Nguyen</span>
+                    <br>
+                    <div style='line-height:150%'>Swinburne University of Technology, Australia</div>
+                  </div>
+                </div>
+
+
               </div>
             </div>
           </div>
